# cliplive

./: .dockerignore  .env.example  .gitignore  .replit  Dockerfile  Dockerfile.dev  INSTALL_VLC.md  README-Docker.md  docker-compose.dev.yml  docker-compose.yml  gatekeep_and_clip.py  init-db.sql  package-lock.json  package.json  pyproject.toml  replit.md  vite.config.ts  vlc_stream_viewer.py
attached_assets/: Pasted--Unified-Player-One-16-9-frame-that-switches-between-YouTube-Twitch-Kick-Notes-T-1755641216783_1755641216784.txt  Pasted-Add-an-HLS-Ad-Gatekeeper-before-the-clipper-Goal-plain-Only-send-clean-Twitch-HLS-URLs-no-ads--1755458557690_1755458557691.txt  Pasted-Prompt-Build-a-Stream-Clipper-Application-Create-an-automatic-livestream-highlight-capture-tool--1752427796787_1752427796787.txt  Pasted-Show-Live-Stream-in-React-Using-Streamlink-Python-React-Summary-Backend-Python-FastAPI-Take--1755608455552_1755608455553.txt  Pasted-which-part-of-these-require-ai-training-Clip-Live-needs-you-Millions-of-creators-want-their-epi-1752520851068_1752520851069.txt
backend/: ad_gatekeeper.py  ai_detector.py  logging_utils.py  setup_nltk.py  stream_processor.py  stream_resolver.py  test_ad_gatekeeper.py  vlc_display.py  whisper_singleton.py
client/: index.html
client/src/: App.tsx  index.css
client/src/api/: streams.ts
data/: events.csv
models/: excitement_model.pkl
server/: auth.ts  index.js  index.ts  package-lock.json  package.json  routes.ts  session-manager.ts  session-routes.ts  storage.ts  stream-processor.ts  vite.ts
shared/: schema.ts
(+26 files in other folders)
