[project]
name = "cliplive-backend"
version = "0.1.0"
description = "ClipLive backend processing engine for real-time stream highlight detection"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.1",
    "nltk>=3.9.1",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "requests>=2.32.4",
    "scikit-learn>=1.7.0",
    "streamlink>=7.5.0",
    "vadersentiment>=3.3.2",
]
